# spp-sockets

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  sandbox.cpp
.github/workflows/: run-unit-tests.yaml
cmake/: check-submodules.cmake
include/spp-socket/: IPv4Address.h  Socket.h  SocketAddress.h  SocketOption.h  codes.h  errors.h  platform.h  utils.h
src/: CMakeLists.txt  IPv4Address.cpp  Socket.cpp  SocketAddress.cpp  SocketOption.cpp  errors.cpp
tests/: CMakeLists.txt  ipv4_address_unit_tests.cpp  socket_unit_tests.cpp
